--- a/.github/workflows/concurrency.yml
+++ b/.github/workflows/concurrency.yml
@@ -29,9 +29,9 @@ jobs:
           matrix="["
           declare -A PORTAL_TO_RALLY_TEST_SET_MAP
           for i in "${!PORTAL_ARRAY[@]}"; do
-            suites=$(yq e ".suites" "scripts/portals/${PORTAL_ARRAY[i]}.yml" | sed 's/^- //; s/^/'\''/; s/$/'\''/' | paste -sd, -')
+            suites=$(yq e ".suites" "scripts/portals/${PORTAL_ARRAY[i]}.yml" | sed 's/^- //; s/^/'\''/; s/$/'\''/' | paste -sd, - | sed 's/^/ /; s/$/ /')
             echo "suites: $suites"
-            IFS=',' read -ra SUITE_ARRAY <<< "$suites"
+            IFS=',' read -ra SUITE_ARRAY <<< "$(echo -n "$suites" | tr -d '[:space:]')"
             for suite in "${SUITE_ARRAY[@]}"; do
               matrix+="{\"portalName\": \"${PORTAL_ARRAY[i]}\", \"suiteName\": \"${suite}\"},"
             done
