push local code to master

--- a/.github/workflows/SlackNotification.yml
+++ b/.github/workflows/SlackNotification.yml
@@ -1,5 +1,8 @@
 name: Slack Notification Demo
-on: push
+on:
+  push:
+  workflow_dispatch:
+
 jobs:
   slackNotification:
     name: Slack Notification
