--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -52,7 +52,7 @@
 #            echo "$var_name=${!var_name}"
 #          done
 
-name: Create Dynamic Array Structure
+name: Dynamic Array Structure Matrix
 
 on:
   workflow_dispatch:
@@ -89,15 +89,20 @@ jobs:
           
           echo "array_structure=$array" >> $GITHUB_OUTPUT
 
-  print-array:
+  process-array:
     runs-on: ubuntu-latest
     needs: create-array
+    strategy:
+      matrix:
+        index:
+          - ${{ fromJson(needs.create-array.outputs.array_structure) | length }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
-      - name: Extract and print array structure
+      - name: Process array element
         run: |
           array_structure="${{ needs.create-array.outputs.array_structure }}"
-          echo "Array Structure:"
-          echo "$array_structure"
+          index=${{ matrix.index }}
+          echo "Processing array element $index:"
+          echo "${array_structure[$((index - 1))]}"  # Adjust index for zero-based array
