--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -93,7 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: create-array
     strategy:
-      matrix: ${{ fromJson(needs.create-array.outputs.array_structure) }}
+      matrix: ${{ fromJson(needs.create-array.outputs.array_structure[0] }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
