--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -88,12 +88,13 @@ jobs:
           array="$array]"
 
           echo "array_structure=$array" >> $GITHUB_OUTPUT
+          echo "array_structure_0=$array_structure[0]"
 
   process-array:
     runs-on: ubuntu-latest
     needs: create-array
     strategy:
-      matrix: ${{ fromJson(needs.create-array.outputs.array_structure[0] }}
+      matrix: ${{ fromJson(needs.create-array.outputs.array_structure }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
