--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -56,46 +56,27 @@ name: Dynamic Array Structure Matrix
 
 on:
   workflow_dispatch:
-    inputs:
-      start:
-        description: 'Start of the sequence'
-        required: true
-        default: 1
-      end:
-        description: 'End of the sequence'
-        required: true
-        default: 2
 
 jobs:
   test:
     strategy:
       matrix:
         tests:
-          - config:
+          - chunk_0:
             - portalName: cm3
               suiteName: "BookAppointmentBacklogTest=cm3"
             - portalName: cm3
               suiteName: "CM3URLBacklogTest=cm3"
-          - setup:
+          - chunk_1:
             - portalName: cm3
               suiteName: "CM7BacklogRegistrationDateTest=cm3"
             - portalName: cm3
               suiteName: "CM7CappedPricingGuideGridListView=cm3"
-
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Print tests matrix variables
-        run: |
-          echo "Tests matrix:"
-          echo "portalName: ${{ matrix.tests.config.portalName }}"
-          echo "suiteName: ${{ matrix.tests.config.suiteName }}"
-
-      - name: Print setup matrix variables
-        run: |
-          echo "Setup matrix:"
-          echo "portalName: ${{ matrix.setup.config.portalName }}"
-          echo "suiteName: ${{ matrix.setup.config.suiteName }}"
+          - chunk_2:
+              - portalName: cm3
+                suiteName: "CM7BacklogRegistrationDateTest=cm3"
+              - portalName: cm3
+                suiteName: "CM7CappedPricingGuideGridListView=cm3"
+    uses: ./.github/workflows/integration-Bat.yml
+    with:
+      chunk: ${{ matrix.tests.chunk }}
