push local code to master

--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -7,23 +7,8 @@ jobs:
   test:
     strategy:
       matrix:
-        tests:
-          - chunk_0:
-            - portalName: cm3
-              suiteName: "BookAppointmentBacklogTest=cm3"
-            - portalName: cm3
-              suiteName: "CM3URLBacklogTest=cm3"
-          - chunk_1:
-            - portalName: cm3
-              suiteName: "CM7BacklogRegistrationDateTest=cm3"
-            - portalName: cm3
-              suiteName: "CM7CappedPricingGuideGridListView=cm3"
-          - chunk_2:
-            - portalName: cm3
-              suiteName: "CM7BacklogRegistrationDateTest=cm3"
-            - portalName: cm3
-              suiteName: "CM7CappedPricingGuideGridListView=cm3"
+        tests: [ "[ {'portalName': 'cm3', 'suiteName': 'BookAppointmentBacklogTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM3URLBacklogTest=cm3'} ]}", "[ {'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3'} ]}", "[ {'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3'} ]" ]
 
     uses: ./.github/workflows/integration-Bat.yml
     with:
-      chunk: ${{ matrix.tests }}
+      chunk: ${{ matrix.tests.chunk }}
