--- a/.github/workflows/integration-Bat.yml
+++ b/.github/workflows/integration-Bat.yml
@@ -10,6 +10,10 @@ on:
 
 jobs:
   metadata:
+    strategy:
+      fail-fast: false
+      matrix:
+        test: ${{ inputs.chunk }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
