--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -7,7 +7,7 @@ jobs:
   test:
     strategy:
       matrix:
-        tests: [ "[ {'portalName': 'cm3', 'suiteName': 'BookAppointmentBacklogTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM3URLBacklogTest=cm3'} ]}", "[ {'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3'} ]}", "[ {'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3'} ]" ]
+        tests: [ "[ {'portalName': 'cm3', 'suiteName': 'BookAppointmentBacklogTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM3URLBacklogTest=cm3'} ]", "[ {'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3'} ]", "[ {'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3'}, {'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3'} ]" ]
 
     uses: ./.github/workflows/integration-Bat.yml
     with:
