push local code to master

--- a/.github/workflows/bat.yml
+++ b/.github/workflows/bat.yml
@@ -1,4 +1,4 @@
-name: Dynamic Array Structure Matrix
+name: Bat Test
 
 on:
   workflow_dispatch:
@@ -8,9 +8,15 @@ jobs:
     strategy:
       matrix:
         tests:
-          - "["{ 'portalName': 'cm3', 'suiteName': 'BookAppointmentBacklogTest=cm3' }", "{ 'portalName': 'cm3', 'suiteName': 'CM3URLBacklogTest=cm3' }"]"
-          - "["{ 'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3' }", "{ 'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3' }"]"
+          - [  # Use square brackets for the array
+            { 'portalName': 'cm3', 'suiteName': 'BookAppointmentBacklogTest=cm3' },
+            { 'portalName': 'cm3', 'suiteName': 'CM3URLBacklogTest=cm3' }
+          ]
+          - [  # Use square brackets for the array
+            { 'portalName': 'cm3', 'suiteName': 'CM7BacklogRegistrationDateTest=cm3' },
+            { 'portalName': 'cm3', 'suiteName': 'CM7CappedPricingGuideGridListView=cm3' }
+          ]
 
     uses: ./.github/workflows/integration-Bat.yml
     with:
-      chunk: ${{ matrix.tests.chunk }}
+      chunk: ${{ matrix.tests }}  # Use matrix.tests directly (no quotes)
